[metadata]
name = vision_toolkit
version = 0.1
author = Dr UDM
author_email = dr.udm.darcy@gmail.com
maintainer = Dr UDM
description = Vision Toolkit
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
include_package_data = True
python_requires = >= 3.6
install_requires =
    bitarray
    bokeh
    bokeh_sampledata
    func_timeout
    gudhi
    hilbertcurve
    holoviews
    lempel_ziv_complexity
    matplotlib
    networkx
    numpy
    imageio
    opencv-python
    pandas
    panel
    plotly
    scikit-learn
    scipy
    seaborn
    shapely
    torch>=1.12
    torchvision>=0.13
    treelib==1.6.4  
    gluestick@git+https://github.com/cvg/GlueStick.git  
    
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

 